redorder content and fix padding and font on small screens

--- a/skeleton/css/custom.css
+++ b/skeleton/css/custom.css
@@ -44,9 +44,11 @@ li {
   font-size: 1.8rem;
 }
 
-.bigger p,
-.bigger li {
-  font-size: 2.3rem;
+@media (min-width: 550px) {
+  .bigger p,
+  .bigger li {
+    font-size: 2.3rem;
+  }
 }
 
 /* links */
